<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InformationActivity" 
    android:background="@color/first">
       <ImageView
           android:id="@+id/imageView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignRight="@+id/textView2"
           android:layout_alignTop="@+id/imageView2"
           android:src="@drawable/chrome"
           android:contentDescription="@string/chrome"
           android:onClick="visitMe" />

       <ImageView
           android:id="@+id/imageView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignTop="@+id/imageView1"
           android:layout_centerHorizontal="true"
           android:contentDescription="@string/gmail"
           android:onClick="mailMe"
           android:src="@drawable/gmail" />

       <ImageView
           android:id="@+id/imageView4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/textView1"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="16dp"
           android:background="@drawable/circle"
           android:contentDescription="@string/logoBy"
           android:src="@drawable/bigicon" />

       <ImageView
           android:id="@+id/imageView5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/imageView2"
           android:layout_below="@+id/TextView01"
           android:contentDescription="@string/chrome"
           android:onClick="toDesigner"
           android:src="@drawable/designer" />

       <TextView
           android:id="@+id/TextView01"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/imageView4"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="18dp"
           android:text="@string/logoBy"
           android:textAlignment="center"
           android:textColor="@color/darkred"
           android:textSize="15sp" />

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_above="@+id/textView3"
           android:layout_centerHorizontal="true"
           android:layout_marginBottom="13dp"
           android:text="@string/info2"
           android:textAlignment="center"
           android:textColor="@color/red"
           android:textSize="18sp" />

       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_centerHorizontal="true"
           android:text="@string/info1"
           android:textAlignment="center"
           android:textColor="@color/blue"
           android:textSize="25sp" />

       <ImageView
           android:id="@+id/imageView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView2"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="29dp"
           android:contentDescription="@string/fb"
           android:onClick="facebookMe"
           android:src="@drawable/facebook" />

       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_above="@+id/imageView2"
           android:layout_centerHorizontal="true"
           android:layout_marginBottom="16dp"
           android:text="@string/info3"
           android:textAlignment="center"
           android:textColor="@color/blue"
           android:textSize="17sp" />

</RelativeLayout>